[package]
name = "google_sheets_fdw"
version = "0.1.0"
authors = ["Your Name <you@example.com>"]
edition = "2018"

# Metadata for building the project as a WebAssembly module
[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }

# Add any other dependencies your project might need here
# example-dependency = "0.1"

[profile.release]
opt-level = "z"  # Optimize for size, suitable for WebAssembly modules
